kubernetes/apps/default/readarr/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name readarr
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`readarr.${SECRET_DOMAIN}`)
      middlewares:
        - name: headers
          namespace: default
        - name: authelia
          namespace: default
      services:
        - name: *name
          port: 8787
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME}-prod-tls
